--- a/style.css
+++ b/style.css
@@ -1,13 +1,82 @@
-.body
+:root
 {
-	background-color: #111111;
-	text-color: #FFFFFF;
-	text-align: center;
+	--autumn-black: #111111;
+	--autumn-white: #FFFFFF;
+	--autumn-purple: #AA8ED6;
 }
 
-.navbar
+.text-b {color: var(--autumn-black);}
+.text-w {color: var(--autumn-white);}
+.text-p {color: var(--autumn-purple);}
+.bg-b {background-color: var(--autumn-black);}
+.bg-w {background-color: var(--autumn-white);}
+.bg-p {background-color: var(--autumn-purple);}
+
+body
 {
-	width: 100%;
-	background-color: #111111;
-	
+	background-color: var(--autumn-black);
+	color: var(--autumn-white);
+	text-align: center;
+	font-family: 'Asap', sans-serif;
+	font-size: 0;
+}
+
+body h1
+{
+	font-weight: 700;
+	font-size: 52px;
+	font-family: 'Exo', sans-serif;
+}
+
+a
+{
+	color: var(--autumn-white);
+	text-decoration: none;
+}
+
+#navbar
+{
+}
+
+#navbar a
+{
+	padding: 8px;
+	background-color: var(--autumn-white);
+	color: var(--autumn-black);
+	font-size: 26px;
+}
+
+#navbar a:hover
+{
+	background-color: var(--autumn-black);
+	color: var(--autumn-white);
+}
+
+#navbar #nav-active
+{
+	background-color: var(--autumn-purple);
+}
+
+.container
+{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding: 26px;
+}
+
+img
+{
+	max-width: 100%;
+}
+
+.image
+{
+	flex-basis: 10%;
+}
+
+.text
+{
+	font-size: 26px;
+	padding-left: 26px;
 }
