--- a/css/style.css
+++ b/css/style.css
@@ -67,19 +67,21 @@ a
 	padding: 30px;
 }
 
-@media screen and (min-width: 961px) {
+@media screen and (min-width: 961px)
+{
 .middlecontainer
 {
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	padding: 30px;
-	margin-left: 25%;
-	margin-right: 25%;
+	margin-left: 0%;
+	margin-right: 0%;
 }
 }
 
-@media screen and (max-width: 960px) {
+@media screen and (max-width: 960px)
+{
 .middlecontainer
 {
 	display: flex;
