--- a/css/img_ids.css
+++ b/css/img_ids.css
@@ -1,1 +1,4 @@
 #autumnhaunted_icon {content:url("../images/autumnhaunted_icon.png");}
+#ba3_title_screen {content:url("../images/ba3_title_screen.png");}
+#virtuoso_card_back {content:url("../images/virtuoso_card_back.png");}
+#bikdip_rpg_screenshot {content:url("../images/bikdip_rpg_screenshot.png");}
