--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,7 @@ a
 }
 
 
-img
+.headercontainer img
 {
 	min-width: 150px;
 	max-width: 100%;
@@ -131,9 +131,21 @@ img
 	flex-basis: 10%;
 }
 
+img.projectimage
+{
+	width: 300px;
+}
+
 .text
 {
 	font-size: 30px;
+}
+
+.projecttext
+{
+	font-size: 20px;
+	text-align: left;
+	padding-left: 30px;
 }
 
 .headertext
